--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Scraping With Mongoose</title>
+    <title>Atlanta Journal Constitution News Scraper</title>
     <style>
       body { background-color: #F2F6D0 }
       #wrapper {
@@ -38,8 +38,8 @@
   </head>
   <body>
     <div id="wrapper">
-      <h1>Comment Scraper</h1>
-      <h2><i>This is the comment scraper</i></h2>
+      <h1>Atlanta Journal Constitution News Scraper</h1>
+      <h2><i>Pick and article and leave a comment about it</i></h2>
       <div id="articles"></div>
       <div id="comments"></div>
     </div>
