changed the passed listen port to env.port

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
       textarea, input {
         display: block;
         width: 100%;
-        background-color: #FCF5C7;
+        background-color:white;
       }
       input {
         height: 36px;
@@ -61,7 +61,7 @@
       <h1 style="text-align: center">Atlanta Journal Constitution News Scraper</h1>
       <div class="transbox">
 
-        <h2><i>Pick and article and leave a comment about it</i></h2>
+        <h2 style="text-align: center"><i> Here is the most recent news from AJC.com. Pick an article and leave a comment about it!</i></h2>
         <div id="articles"></div>
         <div id="comments"></div>
       </div>
